# docs/swagger.json
@@ -37,6 +37,18 @@
                                 "$ref": "#/definitions/models.Document"
                             }
                         }
+                    },
+                    "404": {
+                        "description": "No documents found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -312,17 +324,29 @@
                 "content_type": {
                     "type": "string"
                 },
-                "filename": {
+                "digest": {
                     "type": "string"
                 },
-                "size": {
+                "length": {
                     "type": "integer"
+                },
+                "revpos": {
+                    "type": "integer"
+                },
+                "stub": {
+                    "type": "boolean"
                 }
             }
         },
         "models.Document": {
             "type": "object",
             "properties": {
+                "_attachments": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/models.Attachment"
+                    }
+                },
                 "_id": {
                     "type": "string"
                 },
@@ -331,9 +355,6 @@
                 },
                 "age": {
                     "type": "integer"
-                },
-                "attachment": {
-                    "$ref": "#/definitions/models.Attachment"
                 },
                 "class": {
                     "type": "string"
@@ -358,9 +379,6 @@
                 "age": {
                     "type": "integer"
                 },
-                "attachment": {
-                    "$ref": "#/definitions/models.Attachment"
-                },
                 "class": {
                     "type": "string"
                 },
@@ -380,9 +398,6 @@
             "properties": {
                 "age": {
                     "type": "integer"
-                },
-                "attachment": {
-                    "$ref": "#/definitions/models.Attachment"
                 },
                 "class": {
                     "type": "string"
